--- a/src/css/style.css
+++ b/src/css/style.css
@@ -644,8 +644,148 @@ video {
   top: 75%;
 }
 
+.right-\[100px\]{
+  right: 100px;
+}
+
+.right-\[80px\]{
+  right: 80px;
+}
+
+.right-\[70px\]{
+  right: 70px;
+}
+
+.left-\[70px\]{
+  left: 70px;
+}
+
+.left-\[200px\]{
+  left: 200px;
+}
+
+.left-\[300px\]{
+  left: 300px;
+}
+
+.left-\[350px\]{
+  left: 350px;
+}
+
+.left-\[320px\]{
+  left: 320px;
+}
+
+.left-\[325px\]{
+  left: 325px;
+}
+
+.left-\[80\%\]{
+  left: 80%;
+}
+
+.left-\[75\%\]{
+  left: 75%;
+}
+
+.left-\[70\%\]{
+  left: 70%;
+}
+
+.left-\[72\%\]{
+  left: 72%;
+}
+
+.left-\[73\%\]{
+  left: 73%;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.bottom-\[10px\]{
+  bottom: 10px;
+}
+
+.left-\[50px\]{
+  left: 50px;
+}
+
+.left-\[100px\]{
+  left: 100px;
+}
+
+.top-\[10px\]{
+  top: 10px;
+}
+
+.top-\[100px\]{
+  top: 100px;
+}
+
+.top-\[120px\]{
+  top: 120px;
+}
+
+.top-\[110px\]{
+  top: 110px;
+}
+
+.left-\[90\%\]{
+  left: 90%;
+}
+
+.left-\[60\%\]{
+  left: 60%;
+}
+
+.left-\[65\%\]{
+  left: 65%;
+}
+
+.top-\[150px\]{
+  top: 150px;
+}
+
+.top-\[160px\]{
+  top: 160px;
+}
+
+.left-\[120px\]{
+  left: 120px;
+}
+
+.left-\[220px\]{
+  left: 220px;
+}
+
+.left-\[250px\]{
+  left: 250px;
+}
+
+.left-auto{
+  left: auto;
+}
+
+.right-\[50px\]{
+  right: 50px;
+}
+
+.right-\[30px\]{
+  right: 30px;
+}
+
 .z-20{
   z-index: 20;
+}
+
+.z-50{
+  z-index: 50;
+}
+
+.m-\[40px\]{
+  margin: 40px;
 }
 
 .mx-auto{
@@ -693,12 +833,16 @@ video {
   margin-bottom: 40px;
 }
 
+.mb-\[60px\]{
+  margin-bottom: 60px;
+}
+
 .mb-\[80px\]{
   margin-bottom: 80px;
 }
 
-.ml-5{
-  margin-left: 1.25rem;
+.ml-0{
+  margin-left: 0px;
 }
 
 .mr-5{
@@ -725,16 +869,20 @@ video {
   margin-top: 50px;
 }
 
+.mb-\[10px\]{
+  margin-bottom: 10px;
+}
+
 .mb-\[50px\]{
   margin-bottom: 50px;
 }
 
-.mb-\[60px\]{
-  margin-bottom: 60px;
+.mr-\[40px\]{
+  margin-right: 40px;
 }
 
-.ml-0{
-  margin-left: 0px;
+.ml-\[20px\]{
+  margin-left: 20px;
 }
 
 .block{
@@ -751,6 +899,10 @@ video {
 
 .grid{
   display: grid;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-\[18px\]{
@@ -779,6 +931,18 @@ video {
 
 .h-full{
   height: 100%;
+}
+
+.h-\[15px\]{
+  height: 15px;
+}
+
+.h-\[200px\]{
+  height: 200px;
+}
+
+.h-\[150px\]{
+  height: 150px;
 }
 
 .w-\[120px\]{
@@ -821,16 +985,12 @@ video {
   width: 350px;
 }
 
-.w-\[400px\]{
-  width: 400px;
+.w-\[40px\]{
+  width: 40px;
 }
 
 .w-\[50px\]{
   width: 50px;
-}
-
-.w-\[63px\]{
-  width: 63px;
 }
 
 .w-\[65px\]{
@@ -841,12 +1001,20 @@ video {
   width: 100%;
 }
 
-.w-\[35px\]{
-  width: 35px;
+.w-\[12px\]{
+  width: 12px;
 }
 
-.w-\[40px\]{
-  width: 40px;
+.w-\[130px\]{
+  width: 130px;
+}
+
+.w-\[100px\]{
+  width: 100px;
+}
+
+.w-\[220px\]{
+  width: 220px;
 }
 
 .max-w-\[1000px\]{
@@ -881,12 +1049,41 @@ video {
   max-width: 100%;
 }
 
+.max-w-\[650px\]{
+  max-width: 650px;
+}
+
+.max-w-\[680px\]{
+  max-width: 680px;
+}
+
+.max-w-\[670px\]{
+  max-width: 670px;
+}
+
+.max-w-\[690px\]{
+  max-width: 690px;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
+.max-w-\[350px\]{
+  max-width: 350px;
+}
+
 .translate-x-\[-50\%\]{
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-y-\[-50\%\]{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[50\%\]{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1127,22 +1324,52 @@ video {
   padding-bottom: 9px;
 }
 
-.py-\[15px\]{
-  padding-top: 15px;
-  padding-bottom: 15px;
+.px-\[34px\]{
+  padding-left: 34px;
+  padding-right: 34px;
 }
 
-.py-\[10px\]{
-  padding-top: 10px;
-  padding-bottom: 10px;
+.py-\[30px\]{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.px-\[25px\]{
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.py-\[25px\]{
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.px-\[22px\]{
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
+.py-\[5px\]{
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.py-\[2px\]{
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.py-\[3px\]{
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 .pl-\[20px\]{
   padding-left: 20px;
 }
 
-.pr-\[80px\]{
-  padding-right: 80px;
+.pr-\[50px\]{
+  padding-right: 50px;
 }
 
 .pt-24{
@@ -1161,20 +1388,16 @@ video {
   padding-top: 70px;
 }
 
-.pr-\[60px\]{
-  padding-right: 60px;
-}
-
-.pr-\[50px\]{
-  padding-right: 50px;
-}
-
 .text-left{
   text-align: left;
 }
 
 .text-center{
   text-align: center;
+}
+
+.text-\[10px\]{
+  font-size: 10px;
 }
 
 .text-\[12px\]{
@@ -1209,8 +1432,8 @@ video {
   font-size: 30px;
 }
 
-.text-\[10px\]{
-  font-size: 10px;
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .font-medium{
@@ -1223,10 +1446,6 @@ video {
 
 .font-semibold{
   font-weight: 600;
-}
-
-.font-bold{
-  font-weight: 700;
 }
 
 .leading-\[45px\]{
@@ -1304,6 +1523,12 @@ video {
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1618,6 +1843,22 @@ img {
     left: 15%;
   }
 
+  .sm\:left-\[300px\]{
+    left: 300px;
+  }
+
+  .sm\:left-\[100px\]{
+    left: 100px;
+  }
+
+  .sm\:top-\[110px\]{
+    top: 110px;
+  }
+
+  .sm\:right-auto{
+    right: auto;
+  }
+
   .sm\:mb-\[25px\]{
     margin-bottom: 25px;
   }
@@ -1634,8 +1875,28 @@ img {
     margin-top: 0px;
   }
 
+  .sm\:mb-0{
+    margin-bottom: 0px;
+  }
+
+  .sm\:mr-\[20px\]{
+    margin-right: 20px;
+  }
+
+  .sm\:block{
+    display: block;
+  }
+
   .sm\:h-\[65px\]{
     height: 65px;
+  }
+
+  .sm\:h-\[150px\]{
+    height: 150px;
+  }
+
+  .sm\:w-\[18px\]{
+    width: 18px;
   }
 
   .sm\:w-\[250px\]{
@@ -1666,16 +1927,12 @@ img {
     width: 50px;
   }
 
-  .sm\:w-\[65px\]{
-    width: 65px;
-  }
-
-  .sm\:w-\[18px\]{
-    width: 18px;
-  }
-
   .sm\:w-\[63px\]{
     width: 63px;
+  }
+
+  .sm\:w-\[65px\]{
+    width: 65px;
   }
 
   .sm\:max-w-\[400px\]{
@@ -1695,6 +1952,10 @@ img {
     padding-right: 80px;
   }
 
+  .sm\:text-\[13px\]{
+    font-size: 13px;
+  }
+
   .sm\:text-\[15px\]{
     font-size: 15px;
   }
@@ -1707,8 +1968,8 @@ img {
     font-size: 40px;
   }
 
-  .sm\:text-\[13px\]{
-    font-size: 13px;
+  .sm\:text-\[20px\]{
+    font-size: 20px;
   }
 }
 
@@ -1750,16 +2011,16 @@ img {
     margin-bottom: 30px;
   }
 
+  .md\:ml-5{
+    margin-left: 1.25rem;
+  }
+
   .md\:mr-5{
     margin-right: 1.25rem;
   }
 
   .md\:mr-\[30px\]{
     margin-right: 30px;
-  }
-
-  .md\:ml-5{
-    margin-left: 1.25rem;
   }
 
   .md\:block{
@@ -1861,6 +2122,10 @@ img {
 }
 
 @media (min-width: 976px){
+  .lg\:left-\[325px\]{
+    left: 325px;
+  }
+
   .lg\:mb-\[50px\]{
     margin-bottom: 50px;
   }
@@ -1871,6 +2136,14 @@ img {
 
   .lg\:mr-\[50px\]{
     margin-right: 50px;
+  }
+
+  .lg\:mb-0{
+    margin-bottom: 0px;
+  }
+
+  .lg\:mb-\[100px\]{
+    margin-bottom: 100px;
   }
 
   .lg\:h-\[350px\]{
@@ -1889,8 +2162,28 @@ img {
     max-width: 550px;
   }
 
+  .lg\:max-w-\[400px\]{
+    max-width: 400px;
+  }
+
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:flex-col{
+    flex-direction: column;
+  }
+
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
+  .lg\:items-center{
+    align-items: center;
   }
 
   .lg\:gap-\[30px\]{
@@ -1907,6 +2200,10 @@ img {
 
   .lg\:text-\[18px\]{
     font-size: 18px;
+  }
+
+  .lg\:text-\[15px\]{
+    font-size: 15px;
   }
 }
 
@@ -1930,6 +2227,10 @@ img {
 
   .xl\:max-w-\[650px\]{
     max-width: 650px;
+  }
+
+  .xl\:max-w-\[500px\]{
+    max-width: 500px;
   }
 
   .xl\:flex-row{
