--- a/src/css/style.css
+++ b/src/css/style.css
@@ -604,12 +604,20 @@ video {
   left: 50%;
 }
 
+.left-auto{
+  left: auto;
+}
+
 .right-0{
   right: 0px;
 }
 
 .right-\[20px\]{
   right: 20px;
+}
+
+.right-\[30px\]{
+  right: 30px;
 }
 
 .top-0{
@@ -622,6 +630,10 @@ video {
 
 .top-\[-300\%\]{
   top: -300%;
+}
+
+.top-\[160px\]{
+  top: 160px;
 }
 
 .top-\[45\%\]{
@@ -644,148 +656,12 @@ video {
   top: 75%;
 }
 
-.right-\[100px\]{
-  right: 100px;
-}
-
-.right-\[80px\]{
-  right: 80px;
-}
-
-.right-\[70px\]{
-  right: 70px;
-}
-
-.left-\[70px\]{
-  left: 70px;
-}
-
-.left-\[200px\]{
-  left: 200px;
-}
-
-.left-\[300px\]{
-  left: 300px;
-}
-
-.left-\[350px\]{
-  left: 350px;
-}
-
-.left-\[320px\]{
-  left: 320px;
-}
-
-.left-\[325px\]{
-  left: 325px;
-}
-
-.left-\[80\%\]{
-  left: 80%;
-}
-
-.left-\[75\%\]{
-  left: 75%;
-}
-
-.left-\[70\%\]{
-  left: 70%;
-}
-
-.left-\[72\%\]{
-  left: 72%;
-}
-
-.left-\[73\%\]{
-  left: 73%;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.bottom-\[10px\]{
-  bottom: 10px;
-}
-
-.left-\[50px\]{
-  left: 50px;
-}
-
-.left-\[100px\]{
-  left: 100px;
-}
-
-.top-\[10px\]{
-  top: 10px;
-}
-
-.top-\[100px\]{
-  top: 100px;
-}
-
-.top-\[120px\]{
-  top: 120px;
-}
-
-.top-\[110px\]{
-  top: 110px;
-}
-
-.left-\[90\%\]{
-  left: 90%;
-}
-
-.left-\[60\%\]{
-  left: 60%;
-}
-
-.left-\[65\%\]{
-  left: 65%;
-}
-
-.top-\[150px\]{
-  top: 150px;
-}
-
-.top-\[160px\]{
-  top: 160px;
-}
-
-.left-\[120px\]{
-  left: 120px;
-}
-
-.left-\[220px\]{
-  left: 220px;
-}
-
-.left-\[250px\]{
-  left: 250px;
-}
-
-.left-auto{
-  left: auto;
-}
-
-.right-\[50px\]{
-  right: 50px;
-}
-
-.right-\[30px\]{
-  right: 30px;
-}
-
 .z-20{
   z-index: 20;
 }
 
 .z-50{
   z-index: 50;
-}
-
-.m-\[40px\]{
-  margin: 40px;
 }
 
 .mx-auto{
@@ -803,6 +679,10 @@ video {
 
 .mb-\[100px\]{
   margin-bottom: 100px;
+}
+
+.mb-\[10px\]{
+  margin-bottom: 10px;
 }
 
 .mb-\[12px\]{
@@ -845,6 +725,10 @@ video {
   margin-left: 0px;
 }
 
+.ml-\[20px\]{
+  margin-left: 20px;
+}
+
 .mr-5{
   margin-right: 1.25rem;
 }
@@ -869,22 +753,6 @@ video {
   margin-top: 50px;
 }
 
-.mb-\[10px\]{
-  margin-bottom: 10px;
-}
-
-.mb-\[50px\]{
-  margin-bottom: 50px;
-}
-
-.mr-\[40px\]{
-  margin-right: 40px;
-}
-
-.ml-\[20px\]{
-  margin-left: 20px;
-}
-
 .block{
   display: block;
 }
@@ -905,8 +773,16 @@ video {
   display: none;
 }
 
+.h-\[15px\]{
+  height: 15px;
+}
+
 .h-\[18px\]{
   height: 18px;
+}
+
+.h-\[200px\]{
+  height: 200px;
 }
 
 .h-\[20px\]{
@@ -933,20 +809,16 @@ video {
   height: 100%;
 }
 
-.h-\[15px\]{
-  height: 15px;
-}
-
-.h-\[200px\]{
-  height: 200px;
-}
-
-.h-\[150px\]{
-  height: 150px;
+.w-\[100px\]{
+  width: 100px;
 }
 
 .w-\[120px\]{
   width: 120px;
+}
+
+.w-\[12px\]{
+  width: 12px;
 }
 
 .w-\[150px\]{
@@ -1001,20 +873,12 @@ video {
   width: 100%;
 }
 
-.w-\[12px\]{
-  width: 12px;
+.w-\[140px\]{
+  width: 140px;
 }
 
-.w-\[130px\]{
-  width: 130px;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-\[220px\]{
-  width: 220px;
+.w-\[160px\]{
+  width: 160px;
 }
 
 .max-w-\[1000px\]{
@@ -1033,6 +897,10 @@ video {
   max-width: 620px;
 }
 
+.max-w-\[650px\]{
+  max-width: 650px;
+}
+
 .max-w-\[700px\]{
   max-width: 700px;
 }
@@ -1049,28 +917,12 @@ video {
   max-width: 100%;
 }
 
-.max-w-\[650px\]{
-  max-width: 650px;
-}
-
-.max-w-\[680px\]{
-  max-width: 680px;
-}
-
-.max-w-\[670px\]{
-  max-width: 670px;
-}
-
-.max-w-\[690px\]{
-  max-width: 690px;
+.max-w-\[300px\]{
+  max-width: 300px;
 }
 
 .max-w-\[400px\]{
   max-width: 400px;
-}
-
-.max-w-\[350px\]{
-  max-width: 350px;
 }
 
 .translate-x-\[-50\%\]{
@@ -1079,11 +931,6 @@ video {
 }
 
 .translate-y-\[-50\%\]{
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-\[50\%\]{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1144,6 +991,10 @@ video {
   gap: 40px;
 }
 
+.gap-\[20px\]{
+  gap: 20px;
+}
+
 .rounded-\[20px\]{
   border-radius: 20px;
 }
@@ -1180,6 +1031,14 @@ video {
   border-left-width: 1px;
 }
 
+.border-l-2{
+  border-left-width: 2px;
+}
+
+.border-r-2{
+  border-right-width: 2px;
+}
+
 .border-\[\#BDBDD1\]{
   --tw-border-opacity: 1;
   border-color: rgb(189 189 209 / var(--tw-border-opacity));
@@ -1212,6 +1071,16 @@ video {
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-descriptionColor{
+  --tw-border-opacity: 1;
+  border-color: rgb(70 70 70 / var(--tw-border-opacity));
+}
+
+.border-\[\#FC7E94\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(252 126 148 / var(--tw-border-opacity));
 }
 
 .bg-\[\#23BDEE\]{
@@ -1259,6 +1128,19 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-transparent{
+  background-color: transparent;
+}
+
+.bg-\[\#\]{
+  background-color: #;
+}
+
+.bg-\[\#FC7E94\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 126 148 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-\[0\.8\]{
   --tw-bg-opacity: 0.8;
 }
@@ -1299,6 +1181,11 @@ video {
   padding-right: 20px;
 }
 
+.px-\[22px\]{
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
 .px-\[30px\]{
   padding-left: 30px;
   padding-right: 30px;
@@ -1319,49 +1206,29 @@ video {
   padding-bottom: 20px;
 }
 
+.py-\[3px\]{
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
 .py-\[9px\]{
   padding-top: 9px;
   padding-bottom: 9px;
 }
 
-.px-\[34px\]{
-  padding-left: 34px;
-  padding-right: 34px;
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.py-\[30px\]{
-  padding-top: 30px;
-  padding-bottom: 30px;
+.py-\[15px\]{
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
-.px-\[25px\]{
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
-.py-\[25px\]{
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.px-\[22px\]{
-  padding-left: 22px;
-  padding-right: 22px;
-}
-
-.py-\[5px\]{
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-.py-\[2px\]{
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
-.py-\[3px\]{
-  padding-top: 3px;
-  padding-bottom: 3px;
+.py-\[13px\]{
+  padding-top: 13px;
+  padding-bottom: 13px;
 }
 
 .pl-\[20px\]{
@@ -1386,6 +1253,22 @@ video {
 
 .pt-\[70px\]{
   padding-top: 70px;
+}
+
+.pr-\[30px\]{
+  padding-right: 30px;
+}
+
+.pl-\[30px\]{
+  padding-left: 30px;
+}
+
+.pr-\[20px\]{
+  padding-right: 20px;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
 }
 
 .text-left{
@@ -1416,6 +1299,10 @@ video {
   font-size: 15px;
 }
 
+.text-\[16px\]{
+  font-size: 16px;
+}
+
 .text-\[17px\]{
   font-size: 17px;
 }
@@ -1432,8 +1319,8 @@ video {
   font-size: 30px;
 }
 
-.text-\[16px\]{
-  font-size: 16px;
+.text-\[22px\]{
+  font-size: 22px;
 }
 
 .font-medium{
@@ -1492,8 +1379,27 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\]{
+  color: ;
+}
+
+.text-\[\#\]{
+  color: #;
+}
+
+.text-\[\#B2B3CF\]{
+  --tw-text-opacity: 1;
+  color: rgb(178 179 207 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
+}
+
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-\[0_5px_25px_5px_rgba\(0\2c 0\2c 0\2c 0\.1\)\]{
@@ -1523,12 +1429,6 @@ video {
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-2xl{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1839,6 +1739,10 @@ img {
 }
 
 @media (min-width: 480px){
+  .sm\:left-\[100px\]{
+    left: 100px;
+  }
+
   .sm\:left-\[15\%\]{
     left: 15%;
   }
@@ -1847,16 +1751,16 @@ img {
     left: 300px;
   }
 
-  .sm\:left-\[100px\]{
-    left: 100px;
+  .sm\:right-auto{
+    right: auto;
   }
 
   .sm\:top-\[110px\]{
     top: 110px;
   }
 
-  .sm\:right-auto{
-    right: auto;
+  .sm\:mb-0{
+    margin-bottom: 0px;
   }
 
   .sm\:mb-\[25px\]{
@@ -1867,6 +1771,10 @@ img {
     margin-bottom: 50px;
   }
 
+  .sm\:mr-\[20px\]{
+    margin-right: 20px;
+  }
+
   .sm\:mr-\[30px\]{
     margin-right: 30px;
   }
@@ -1875,24 +1783,16 @@ img {
     margin-top: 0px;
   }
 
-  .sm\:mb-0{
-    margin-bottom: 0px;
-  }
-
-  .sm\:mr-\[20px\]{
-    margin-right: 20px;
-  }
-
   .sm\:block{
     display: block;
   }
 
-  .sm\:h-\[65px\]{
-    height: 65px;
-  }
-
   .sm\:h-\[150px\]{
     height: 150px;
+  }
+
+  .sm\:h-\[65px\]{
+    height: 65px;
   }
 
   .sm\:w-\[18px\]{
@@ -1943,13 +1843,30 @@ img {
     flex-direction: row;
   }
 
+  .sm\:border-r-2{
+    border-right-width: 2px;
+  }
+
   .sm\:py-\[20px\]{
     padding-top: 20px;
     padding-bottom: 20px;
   }
 
+  .sm\:px-\[20px\]{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   .sm\:pr-\[80px\]{
     padding-right: 80px;
+  }
+
+  .sm\:pl-\[20px\]{
+    padding-left: 20px;
+  }
+
+  .sm\:pr-\[20px\]{
+    padding-right: 20px;
   }
 
   .sm\:text-\[13px\]{
@@ -1960,16 +1877,16 @@ img {
     font-size: 15px;
   }
 
+  .sm\:text-\[20px\]{
+    font-size: 20px;
+  }
+
   .sm\:text-\[25px\]{
     font-size: 25px;
   }
 
   .sm\:text-\[40px\]{
     font-size: 40px;
-  }
-
-  .sm\:text-\[20px\]{
-    font-size: 20px;
   }
 }
 
@@ -2126,6 +2043,14 @@ img {
     left: 325px;
   }
 
+  .lg\:mb-0{
+    margin-bottom: 0px;
+  }
+
+  .lg\:mb-\[100px\]{
+    margin-bottom: 100px;
+  }
+
   .lg\:mb-\[50px\]{
     margin-bottom: 50px;
   }
@@ -2136,14 +2061,6 @@ img {
 
   .lg\:mr-\[50px\]{
     margin-right: 50px;
-  }
-
-  .lg\:mb-0{
-    margin-bottom: 0px;
-  }
-
-  .lg\:mb-\[100px\]{
-    margin-bottom: 100px;
   }
 
   .lg\:h-\[350px\]{
@@ -2158,12 +2075,12 @@ img {
     width: 500px;
   }
 
-  .lg\:max-w-\[550px\]{
-    max-width: 550px;
-  }
-
   .lg\:max-w-\[400px\]{
     max-width: 400px;
+  }
+
+  .lg\:max-w-\[550px\]{
+    max-width: 550px;
   }
 
   .lg\:grid-cols-3{
@@ -2174,16 +2091,8 @@ img {
     flex-direction: row;
   }
 
-  .lg\:flex-col{
-    flex-direction: column;
-  }
-
   .lg\:items-start{
     align-items: flex-start;
-  }
-
-  .lg\:items-center{
-    align-items: center;
   }
 
   .lg\:gap-\[30px\]{
@@ -2198,12 +2107,12 @@ img {
     padding: 1.5rem;
   }
 
-  .lg\:text-\[18px\]{
-    font-size: 18px;
-  }
-
   .lg\:text-\[15px\]{
     font-size: 15px;
+  }
+
+  .lg\:text-\[18px\]{
+    font-size: 18px;
   }
 }
 
@@ -2225,12 +2134,12 @@ img {
     margin-right: 0px;
   }
 
-  .xl\:max-w-\[650px\]{
-    max-width: 650px;
-  }
-
   .xl\:max-w-\[500px\]{
     max-width: 500px;
+  }
+
+  .xl\:max-w-\[650px\]{
+    max-width: 650px;
   }
 
   .xl\:flex-row{
